--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@yzfe/qrcodejs",
   "version": "1.0.0",
-  "private": false,
   "description": "Cross-browser QRCode generator for javascript davidshimjs/qrcodejs",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -14,5 +13,9 @@
     "rollup": "^2.60.1",
     "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   }
 }
